--- a/notebooks/02_Preprocessing.ipynb
+++ b/notebooks/02_Preprocessing.ipynb
@@ -10,9 +10,6 @@
     "1. Prepare data for machine learning (scaling, encoding, splitting)\n",
     "2. Create train-test splits with stratification\n",
     "3. Train baseline models to validate preprocessing\n",
-    "4. Compare with Kaggle results\n",
-    "\n",
-    "**Reference:** Following methodology from Kaggle notebook (Section 4)\n",
     "\n",
     "---"
    ]
@@ -660,7 +657,7 @@
     "---\n",
     "## 6. Train-Test Split\n",
     "\n",
-    "**Following Kaggle approach:** 80-20 split with stratification to maintain class distribution."
+    "80-20 split with stratification to maintain class distribution."
    ]
   },
   {
@@ -956,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1000,7 @@
     }
    ],
    "source": [
-    "# Define baseline models (following Kaggle approach)\n",
+    "# Define baseline models\n",
     "baseline_models = [\n",
     "    (LogisticRegression(random_state=RANDOM_STATE, max_iter=1000), \"Logistic Regression\"),\n",
     "    (DecisionTreeClassifier(random_state=RANDOM_STATE), \"Decision Tree\"),\n",
@@ -1493,11 +1490,15 @@
     "- Data preprocessing (scaling, encoding)\n",
     "- Train-test split with stratification\n",
     "- Baseline model training and evaluation\n",
-    "- Results comparison with Kaggle notebook\n",
     "- All artifacts saved properly\n",
     "\n",
     "**Next Phase:** Feature Engineering"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
