fix: update package installations and clean up notebook cells

--- a/notebooks/02_Preprocessing.ipynb
+++ b/notebooks/02_Preprocessing.ipynb
@@ -23,7 +23,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (2.3.3)\n",
+      "Requirement already satisfied: numpy in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (2.3.5)\n",
+      "Requirement already satisfied: matplotlib in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (3.10.7)\n",
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.10.8-cp311-cp311-macosx_11_0_arm64.whl.metadata (52 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m52.8/52.8 kB\u001b[0m \u001b[31m856.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: seaborn in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (0.13.2)\n",
+      "Requirement already satisfied: scikit-learn in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (1.7.2)\n",
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.8.0-cp311-cp311-macosx_12_0_arm64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: joblib in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (1.5.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from matplotlib) (1.3.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from matplotlib) (4.60.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from matplotlib) (1.4.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from matplotlib) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from matplotlib) (12.0.0)\n",
+      "Requirement already satisfied: pyparsing>=3 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from matplotlib) (3.2.5)\n",
+      "Requirement already satisfied: scipy>=1.10.0 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from scikit-learn) (1.16.3)\n",
+      "Requirement already satisfied: threadpoolctl>=3.2.0 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from scikit-learn) (3.6.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/sanjoypator/Desktop/dev/work/ml-electrical-fault-detection/venv/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Downloading matplotlib-3.10.8-cp311-cp311-macosx_11_0_arm64.whl (8.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.1/8.1 MB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading scikit_learn-1.8.0-cp311-cp311-macosx_12_0_arm64.whl (8.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.1/8.1 MB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: scikit-learn, matplotlib\n",
+      "  Attempting uninstall: scikit-learn\n",
+      "    Found existing installation: scikit-learn 1.7.2\n",
+      "    Uninstalling scikit-learn-1.7.2:\n",
+      "      Successfully uninstalled scikit-learn-1.7.2\n",
+      "  Attempting uninstall: matplotlib\n",
+      "    Found existing installation: matplotlib 3.10.7\n",
+      "    Uninstalling matplotlib-3.10.7:\n",
+      "      Successfully uninstalled matplotlib-3.10.7\n",
+      "Successfully installed matplotlib-3.10.8 scikit-learn-1.8.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -U pandas numpy matplotlib seaborn scikit-learn joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1494,11 +1552,6 @@
     "\n",
     "**Next Phase:** Feature Engineering"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
