main: SSA code notebook and notes added in docs

--- a/notebooks/06_SSA_Optimization.ipynb
+++ b/notebooks/06_SSA_Optimization.ipynb
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1087,36 +1087,47 @@
    ],
    "source": [
     "# Bar chart comparison\n",
-    "fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "fig, ax = plt.subplots(figsize=(10, 6))  # Reduced width from 12 to 10\n",
     "\n",
     "models = comparison_df['Model']\n",
     "accuracies = comparison_df['Test Accuracy'] * 100\n",
     "colors = ['#3498db', '#e74c3c', '#3498db', '#e74c3c']\n",
     "\n",
-    "bars = ax.bar(range(len(models)), accuracies, color=colors, alpha=0.7, edgecolor='black')\n",
+    "bars = ax.bar(range(len(models)), accuracies, color=colors, alpha=0.7, edgecolor='black', width=0.6)\n",
     "\n",
     "# Add value labels\n",
     "for i, (bar, acc) in enumerate(zip(bars, accuracies)):\n",
     "    height = bar.get_height()\n",
-    "    ax.text(bar.get_x() + bar.get_width()/2., height,\n",
+    "    ax.text(bar.get_x() + bar.get_width()/2., height + 0.01,  # Slight offset above bar\n",
     "            f'{acc:.4f}%',\n",
-    "            ha='center', va='bottom', fontsize=11, fontweight='bold')\n",
+    "            ha='center', va='bottom', fontsize=10, fontweight='bold')\n",
     "    \n",
     "    # Add improvement text for SSA models\n",
     "    if 'SSA' in models.iloc[i]:\n",
     "        improvement = comparison_df['Improvement'].iloc[i]\n",
     "        if improvement > 0:\n",
-    "            ax.text(bar.get_x() + bar.get_width()/2., height/2,\n",
+    "            ax.text(bar.get_x() + bar.get_width()/2., 99.85,  # Fixed position\n",
     "                   f'+{improvement:.4f}%',\n",
-    "                   ha='center', va='center', fontsize=10, \n",
-    "                   color='white', fontweight='bold')\n",
+    "                   ha='center', va='center', fontsize=9, \n",
+    "                   color='green', fontweight='bold',\n",
+    "                   bbox=dict(boxstyle='round,pad=0.3', facecolor='white', edgecolor='green', alpha=0.8))\n",
+    "        elif improvement < 0:\n",
+    "            ax.text(bar.get_x() + bar.get_width()/2., 99.85,  # Fixed position\n",
+    "                   f'{improvement:.4f}%',\n",
+    "                   ha='center', va='center', fontsize=9, \n",
+    "                   color='red', fontweight='bold',\n",
+    "                   bbox=dict(boxstyle='round,pad=0.3', facecolor='white', edgecolor='red', alpha=0.8))\n",
     "\n",
-    "ax.set_ylabel('Test Accuracy (%)', fontsize=12)\n",
-    "ax.set_title('Baseline vs SSA-Optimized Models', fontsize=14, fontweight='bold')\n",
+    "ax.set_ylabel('Test Accuracy (%)', fontsize=12, fontweight='bold')\n",
+    "ax.set_title('Baseline vs SSA-Optimized Models', fontsize=14, fontweight='bold', pad=15)\n",
     "ax.set_xticks(range(len(models)))\n",
-    "ax.set_xticklabels(models, rotation=15, ha='right')\n",
-    "ax.set_ylim([99.0, 100.0])\n",
-    "ax.grid(axis='y', alpha=0.3)\n",
+    "ax.set_xticklabels(models, rotation=20, ha='right', fontsize=10)\n",
+    "ax.set_ylim([99.3, 100.05])  # Adjusted y-axis range to be more appropriate\n",
+    "ax.grid(axis='y', alpha=0.3, linestyle='--', linewidth=0.5)\n",
+    "\n",
+    "# Add a horizontal line at 99.75% to show Phase 5 best\n",
+    "ax.axhline(y=99.7457, color='green', linestyle=':', linewidth=1.5, alpha=0.6, label='Phase 5 Best')\n",
+    "ax.legend(loc='lower left', fontsize=9)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(RESULTS_DIR / 'plots' / 'ssa_comparison.png', dpi=300, bbox_inches='tight')\n",
